allprojects {
    group = 'com.artificial-city-simulator'
    version = '1.1.0-SNAPSHOT'

    ext {
        applicationName = 'artificial-city-simulator'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'maven'

    sourceCompatibility = 1.9
    targetCompatibility = 1.9

    repositories {
        mavenCentral()
        maven {
            url 'https://repo.spring.io/libs-release'
        }
    }

    dependencies {
        compile 'org.projectlombok:lombok:1.16.20'
        compile("org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE")

        testCompile 'junit:junit:4.12'
        testCompile group: 'org.springframework', name: 'spring-test', version: '2.5'
        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
    }
}